--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@
     min-height: 5px;
     background-color: black; 
 }
+.ticTacToe{
+    padding-top: 30px;
+    min-width: 200px;
+    text-align: center;
+}
 H1{
     color: white;
 }
