--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
+.header-with-matrix{
+  height: 400px;
+}
+canvas {
+  position: absolute;
+  z-index: 1;
+}
 .firstBlock {
-  min-height: 400px;
   display: flex;
-  justify-content: center;
+  position: absolute;
+  justify-content: flex-start;
   flex-direction: column;
-  align-items: center;
-  background: url(data/forest.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  align-items: flex-start;
+  min-height: 400px;
+  width: 100vw;
+  z-index: 1000;
+}
+.firstBlock H1 {
+  color: white;
+  padding-left: 2rem;
+}
+.firstBlock .line {
+  width: 100%;
+}
+.firstBlock .myFace{
+  padding: 2rem 0 0 2rem;
 }
 .secondBlock {
   min-height: 400px;
@@ -26,11 +43,12 @@
 }
 .thridBlock_1 {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  gap: 1rem;
+  padding: 0 1rem;
 }
 .thridBlock_1 div {
-  height: 50%;
+  flex-basis: 100%;
 }
 .thridBlock_1 p {
   text-align: center;
@@ -54,7 +72,7 @@
 }
 .fourBlock a {
   color: black;
-  font-size: 18px;
+  font-size: 1.25rem;
 }
 
 .fiveBlock {
@@ -72,29 +90,26 @@
   transform: rotate(180deg);
 }
 .verticalLine {
-  min-width: 5px;
+  min-width: 0.25rem;
   min-height: 300px;
   background-color: black;
 }
 .line {
   min-width: 600px;
-  min-height: 5px;
+  min-height: 0.25rem;
   background-color: white;
 }
 .lineBlack {
   min-width: 600px;
-  min-height: 5px;
+  min-height: 0.25rem;
   background-color: black;
 }
 .go-to-top {
   display: block;
   position: fixed;
   top: 95vh;
-  left: 30px;
+  left: 2rem;;
   transform: scale(2);
-}
-H1 {
-  color: white;
 }
 img {
   border-radius: 50%;
@@ -107,11 +122,24 @@ img:hover {
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
 }
-body {
+html, body {
+  margin: 0;
+  padding: 0;
   font-size: larger;
   font-family: cursive;
+  overflow-x: hidden;
 }
 a {
   text-decoration: none;
   color: black;
 }
+.fourBlock li {
+  white-space: nowrap;
+}
+menu {
+  all: inherit;
+}
+.d-flex{
+  display: flex;
+}
+
